controller: add generated code from swagger.yaml
